--- a/tex/fundamentals.tex
+++ b/tex/fundamentals.tex
@@ -193,7 +193,7 @@ Nevertheless, they have several limitations, with some of the most pressing ones
 Furthermore, the size of modern deep learning models exhibits an even faster growth, as demonstrated by state-of-the-art large language models: 
 ELMo from 2018 uses around 94 million parameters \sidecite{peters_deep_2018}, 
 GPT-3 from 2020 uses around 175 billion parameters \sidecite{brown_language_2020}, and Megatron-Turing NLG from 2022 has 530 billion parameters \cite{smith_using_2022}.
-An analysis by \citeay{open_ai_ai_2018} shows exponential growth in computational usage by AI models, with a doubling time of about 3.4 months, outpacing the rate of hardware progress, which has a doubling time of 2 years. Moreover, the increasing size of deep networks poses a challenge for inference on low-budget hardware such as smartphones or embedded systems \cite{berthelier_deep_2021}. Although techniques such as quantisation \cite{wu_integer_2020}, model pruning \sidecite{choudhary_comprehensive_2020} and model distillation \sidecite{zhou_distilling_2021} exist to reduce model size after training, the question is whether increasing model size is the best way to develop more advanced systems regarding feasibility but also regarding energy consumption \sidecite{garcia-martin_estimation_2019}.
+An analysis by \citeay{open_ai_ai_2018} shows exponential growth in computational usage by AI models, with a doubling time of about 3.4 months, outpacing the rate of hardware progress, which has a doubling time of 2 years. Moreover, the increasing size of deep networks poses a challenge for inference on low-budget hardware such as smartphones or embedded systems \cite{berthelier_deep_2021}. Although techniques such as quantisation \cite{wu_integer_2020}, model pruning \sidecite{choudhary_comprehensive_2020}, and model distillation \sidecite{zhou_distilling_2021} exist to reduce model size after training, the question is whether increasing model size is the best way to develop more advanced systems regarding feasibility but also regarding energy consumption \sidecite{garcia-martin_estimation_2019}.
 
 \paragraph{Catastrophic Forgetting.} Another major issue of deep learning systems is that they suffer from catastrophic forgetting \sidecite{kirkpatrick_overcoming_2017, liu_overcoming_2021}.
 If a model is trained on a specific task and afterwards trained (or fine-tuned) on another task, the model suffers a ``catastrophic'' drop in performance over the first task \cite{kirkpatrick_overcoming_2017}.
