--- a/zotero2.bib
+++ b/zotero2.bib
@@ -1,4 +1,20 @@
 
+@article{piaget_cognitive_1964,
+	title = {Cognitive development in children: Piaget development and learning},
+	volume = {2},
+	issn = {0022-4308},
+	url = {https://onlinelibrary.wiley.com/doi/10.1002/tea.3660020306},
+	doi = {10.1002/tea.3660020306},
+	pages = {176--186},
+	number = {3},
+	journaltitle = {Journal of Research in Science Teaching},
+	shortjournal = {J. Res. Sci. Teach.},
+	author = {Piaget, Jean},
+	urldate = {2023-07-01},
+	date = {1964-09},
+	langid = {english},
+}
+
 @article{buetti-dinh_deep_2019,
 	title = {Deep neural networks outperform human expert's capacity in characterizing bioleaching bacterial biofilm composition},
 	volume = {22},
@@ -845,23 +861,6 @@
 	author = {Poljak, Stjepan},
 	urldate = {2023-07-02},
 	date = {1927-12},
-	langid = {english},
-}
-
-@article{piaget_part_1964,
-	title = {Part I: Cognitive development in children: Piaget development and learning},
-	volume = {2},
-	issn = {0022-4308},
-	url = {https://onlinelibrary.wiley.com/doi/10.1002/tea.3660020306},
-	doi = {10.1002/tea.3660020306},
-	shorttitle = {Part I},
-	pages = {176--186},
-	number = {3},
-	journaltitle = {Journal of Research in Science Teaching},
-	shortjournal = {J. Res. Sci. Teach.},
-	author = {Piaget, Jean},
-	urldate = {2023-07-01},
-	date = {1964-09},
 	langid = {english},
 }
 
