--- a/sources_corrected.bib
+++ b/sources_corrected.bib
@@ -1,3 +1,20 @@
+
+@article{piaget_cognitive_1964,
+	title = {Cognitive development in children: Piaget development and learning},
+	volume = {2},
+	issn = {0022-4308},
+	url = {https://onlinelibrary.wiley.com/doi/10.1002/tea.3660020306},
+	doi = {10.1002/tea.3660020306},
+	pages = {176--186},
+	number = {3},
+	journaltitle = {Journal of Research in Science Teaching},
+	shortjournal = {J. Res. Sci. Teach.},
+	author = {Piaget, Jean},
+	urldate = {2023-07-01},
+	date = {1964-09},
+	langid = {english},
+}
+
 @article{buetti-dinh_deep_2019,
 	title = {Deep neural networks outperform human expert's capacity in characterizing bioleaching bacterial biofilm composition},
 	volume = {22},
@@ -12,7 +29,6 @@
 	date = {2019-06},
 	langid = {english},
 }
-
 
 @incollection{hu_regenerating_2021,
 	location = {Cham, Switzerland},
@@ -845,22 +861,6 @@
 	author = {Poljak, Stjepan},
 	urldate = {2023-07-02},
 	date = {1927-12},
-	langid = {english},
-}
-
-@article{piaget_part_1964,
-	title = {Cognitive development in children: Piaget development and learning},
-	volume = {2},
-	issn = {0022-4308},
-	url = {https://onlinelibrary.wiley.com/doi/10.1002/tea.3660020306},
-	doi = {10.1002/tea.3660020306},
-	pages = {176--186},
-	number = {3},
-	journaltitle = {Journal of Research in Science Teaching},
-	shortjournal = {J. Res. Sci. Teach.},
-	author = {Piaget, Jean},
-	urldate = {2023-07-01},
-	date = {1964-09},
 	langid = {english},
 }
 
@@ -3374,19 +3374,6 @@ matching state-of-the-art model-free and model-based algorithms on {MuJoCo} cont
 	langid = {english},
 }
 
-@incollection{rumelhart_learning_1986,
-	location = {Cambridge, {MA}, {USA}},
-	title = {Learning Internal Representations by Error Propagation},
-	volume = {1},
-	isbn = {0-262-68053-X},
-	pages = {318--362},
-	booktitle = {Parallel Distributed Processing: Explorations in the Microstructure of Cognition},
-	publisher = {{MIT} Press},
-	author = {Rumelhart, David E. and Hinton, Geoffrey E. and Williams, Ronald J.},
-	date = {1986},
-	langid = {english},
-}
-
 @incollection{gerber_stride_2020,
 	location = {Cham, Switzerland},
 	title = {Stride and Translation Invariance in {CNNs}},
@@ -4121,20 +4108,6 @@ matching state-of-the-art model-free and model-based algorithms on {MuJoCo} cont
 	author = {Jaderberg, Max and Czarnecki, Wojciech Marian and Osindero, Simon and Vinyals, Oriol and Graves, Alex and Silver, David and Kavukcuoglu, Koray},
 	editor = {Precup, Doina and Teh, Yee Whye},
 	date = {2017-08-06},
-}
-
-@inproceedings{fritzke_growing_1994,
-	location = {Denver, {CO}, {USA}},
-	title = {A Growing Neural Gas Network Learns Topologies},
-	volume = {7},
-	url = {https://proceedings.neurips.cc/paper_files/paper/1994/file/d56b9fc4b0f1be8871f5e1c40c0067e7-Paper.pdf},
-	series = {{NIPS}'94},
-	pages = {625--632},
-	booktitle = {Proceedings of the 7th International Conference on Neural Information Processing Systems},
-	publisher = {{MIT} Press},
-	author = {Fritzke, Bernd},
-	editor = {Tesauro, Gerald and Touretzky, David S. and Leen, Todd K.},
-	date = {1994},
 }
 
 @inproceedings{belilovsky_decoupled_2020,
